<resources>
    <string name="app_name">InventoryApp</string>
    <string name="title_activity_catalog">CatalogActivity</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_item">Item Details</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_size">Size</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_handedness">Handedness</string>

    <!--string for deleting all items  -->
    <string name="delete_all_data">Delete all items</string>

    <!--Text hint for item field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Item</string>

    <!--Text hint for brand field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_brand">Brand</string>

    <!--Text hint for brand field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!--Text hint for brand field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity</string>

    <!-- Label for category for size Spinner [CHAR LIMIT=30] -->
    <string name="size_universal">Universal</string>

    <!-- Label for category for size Spinner [CHAR LIMIT=30] -->
    <string name="size_adults">Adults</string>

    <!-- Label for category for size Spinner [CHAR LIMIT=30] -->
    <string name="size_youths">Youths</string>

    <!-- Label for category for the handedness Options [CHAR LIMIT=30] -->
    <string name="handedness_ambidextrous">Ambidextrous</string>

    <!-- Label for category for the handedness Options [CHAR LIMIT=30] -->
    <string name="handedness_right">Right</string>

    <!-- Label for category for the handedness Options [CHAR LIMIT=30] -->
    <string name="handedness_left">Left</string>

    <!-- Menu button to delete item from database -->
    <string name="action_delete">Delete</string>

    <!-- Menu button to delete item from database -->
    <string name="action_save">Save</string>

    <!-- Dialog message  when the user is leaving editor but hasn't saved changes [CHAR LIMIT = NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT = 20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT = 20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for adding a new item [ CHAR LIMIT = 30] -->
    <string name="editor_activity_title_new_item">Add a new item</string>

    <!-- Label for editing an existing item [ CHAR LIMIT = 30] -->
    <string name="editor_activity_title_edit_an_item">Edit an item</string>

    <!-- Label for confirming a successful item added to the database -->
    <string name="editor_insert_item_successful">Item added successfully!</string>

    <!-- Label for confirming an item added to the database has failed -->
    <string name="editor_insert_item_failed">Failed to add item to the database</string>

    <!-- Toast message that confirms the there has been a error in deleting the item [CHAR LIMIT = 30] -->
    <string name="editor_delete_item_failed">Failed to delete item </string>

    <!-- Toast message that confirms the succesful deletion of the item from the database [CHAR LIMIT = 30] -->
    <string name="editor_delete_item_successful">Item deleted successfully</string>

    <!-- Dialog message that confirms if you wish to delete the item from the database [CHAR LIMIT = 30] -->
    <string name="delete_dialog_msg">Delete item?</string>

    <!-- Dialog message button for delete -->
    <string name="delete">Delete</string>

    <!-- Dialog message for cancel -->
    <string name="cancel">Cancel</string>

    <!-- Label for item name -->
    <string name="item_name">Item: </string>

    <!-- Label for item brand -->
    <string name="item_brand">Brand: </string>

    <!-- Label for item quantity -->
    <string name="item_quantity">Quantity: </string>

    <!-- Label for  item price -->
    <string name="item_price">Price: </string>

    <!-- Button text to increment -->
    <string name="item_increment">+</string>

    <!-- Button text to decrement -->
    <string name="item_decrement">-</string>

</resources>
