<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.stuart.inventoryapp.EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_item"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Item Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>

            <!-- Brand field -->
            <EditText
                android:id="@+id/edit_item_brand"
                android:hint="@string/hint_item_brand"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/price_decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_decrement"/>

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    android:hint="@string/hint_item_price"
                    android:inputType="textCapWords"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/price_increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_increment"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quantity_decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_decrement"/>

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_item_quantity"
                    android:hint="@string/hint_item_quantity"
                    android:inputType="textCapWords"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/quantity_increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_increment"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
